tests/specs/run/error_021_stack_method/error_021_stack_method.ts.out
[WILDCARD]Error: method
    at A.m ([WILDCARD]/error_021_stack_method.ts:[WILDCARD])
    at [WILDCARD]/error_021_stack_method.ts:[WILDCARD]
error: Uncaught (in promise) Error: method
    throw new Error("method");
          ^
    at A.m ([WILDCARD]/error_021_stack_method.ts:[WILDCARD])
    at [WILDCARD]/error_021_stack_method.ts:[WILDCARD]
